--- a/m4r/views/overview.erb
+++ b/m4r/views/overview.erb
@@ -1,13 +1,14 @@
     <div id="container">
       <div id="banner">
         <h1 id="banner-header" title="Click to hide the overview information">
-          <div class="collapsible-header expanded" content_id="collapsible-banner" >
+          <span>Mapping for Results</span>
+          <div class="collapsible-header collapsed" content_id="collapsible-banner" >
             <div title="More information about Mapping for Results" class="banner-open-image"></div>
           </div>
         </h1>
         
         <div id="banner-content">
-          <div class="collapsible-content" id="collapsible-banner" delay="2000" params="{ &quot;effect&quot;: &quot;blind&quot;, &quot;options&quot;: { &quot;direction&quot;: &quot;up&quot; }, &quot;delay&quot;: 2000 }">
+          <div class="collapsible-content" id="collapsible-banner" style="display:none">
             <div id="block-nodeasblock-3273" class="block block-nodeasblock ">
               <div class="content">
                 <div class="overview-links">
