--- a/m4r/views/projects_table.erb
+++ b/m4r/views/projects_table.erb
@@ -1,5 +1,5 @@
    <!--Project Search Bar Begins-->
-    <div id="projects-bar">
+    <div id="projects-bar" class="expanded">
       <div class="project-bar-text"><img src="/images/down-arrow-black.gif" alt="" width="11" height="7" class="img-margins" />&nbsp;&nbsp;&nbsp;&nbsp;Total Project List / <%= @country[:name].capitalize %></div>
       <div id="div">
         <form action="/" accept-charset="UTF-8" method="post" id="search-theme-form">
