--- a/m4r/views/sector_controls.erb
+++ b/m4r/views/sector_controls.erb
@@ -19,16 +19,16 @@
         <div id="map-content-icons2">
           <ul>
             <li class="sectors">ACTIVE SECTORS:</li>
-            <li class="s1"><a  sector-name="public" original-title="Public administration Law, Justice" class="sectorcontrol inactive" id="sectorcontrol_public" href="javascript:wb.toggleSector('public')">1</a></li>
-            <li class="s2"><a  sector-name="agriculture" original-title="Agriculture, fishing, forestry" class="sectorcontrol inactive" id="sectorcontrol_agriculture" href="javascript:wb.toggleSector('agriculture')">2</a></li>
-            <li class="s3"><a  sector-name="health" original-title="Health, other social" class="sectorcontrol inactive" id="sectorcontrol_health" href="javascript:wb.toggleSector('health')">3</a></li>
-            <li class="s4"><a  sector-name="communications" original-title="Communications" class="sectorcontrol inactive" id="sectorcontrol_communications" href="javascript:wb.toggleSector('communications')">4</a></li>
-            <li class="s5"><a  sector-name="energy" original-title="Energy, mining" class="sectorcontrol inactive" id="sectorcontrol_energy" href="javascript:wb.toggleSector('energy')">5</a></li>
-            <li class="s6"><a  sector-name="finance" original-title="Finance" class="sectorcontrol inactive" id="sectorcontrol_finance" href="javascript:wb.toggleSector('finance')">6</a></li>
-            <li class="s7"><a  sector-name="industry" original-title="Industry, trade" class="sectorcontrol inactive" id="sectorcontrol_industry" href="javascript:wb.toggleSector('industry')">7</a></li>
-            <li class="s8"><a  sector-name="transportation" original-title="Transportation" class="sectorcontrol inactive" id="sectorcontrol_transportation" href="javascript:wb.toggleSector('transportation')">8</a></li>
-            <li class="s9"><a  sector-name="water" original-title="Water, Sanitation, flood protection" class="sectorcontrol inactive" id="sectorcontrol_water" href="javascript:wb.toggleSector('water')">9</a></li>
-            <li class="s10"><a sector-name="education" original-title="Education" id="sector11" href="javascript:wb.toggleSector('education')">10</a> </li>
+            <li class="s1"><a  sector-name="public" original-title="Public administration Law, Justice" class="sectorcontrol inactive" id="sectorcontrol_public" href="#" onclick="return wb.toggleSector('public')">1</a></li>
+            <li class="s2"><a  sector-name="agriculture" original-title="Agriculture, fishing, forestry" class="sectorcontrol inactive" id="sectorcontrol_agriculture" href="#" onclick="return wb.toggleSector('agriculture')">2</a></li>
+            <li class="s3"><a  sector-name="health" original-title="Health, other social" class="sectorcontrol inactive" id="sectorcontrol_health" href="#" onclick="return wb.toggleSector('health')">3</a></li>
+            <li class="s4"><a  sector-name="communications" original-title="Communications" class="sectorcontrol inactive" id="sectorcontrol_communications" href="#" onclick="return wb.toggleSector('communications')">4</a></li>
+            <li class="s5"><a  sector-name="energy" original-title="Energy, mining" class="sectorcontrol inactive" id="sectorcontrol_energy" href="#" onclick="return wb.toggleSector('energy')">5</a></li>
+            <li class="s6"><a  sector-name="finance" original-title="Finance" class="sectorcontrol inactive" id="sectorcontrol_finance" href="#" onclick="return wb.toggleSector('finance')">6</a></li>
+            <li class="s7"><a  sector-name="industry" original-title="Industry, trade" class="sectorcontrol inactive" id="sectorcontrol_industry" href="#" onclick="return wb.toggleSector('industry')">7</a></li>
+            <li class="s8"><a  sector-name="transportation" original-title="Transportation" class="sectorcontrol inactive" id="sectorcontrol_transportation" href="#" onclick="return wb.toggleSector('transportation')">8</a></li>
+            <li class="s9"><a  sector-name="water" original-title="Water, Sanitation, flood protection" class="sectorcontrol inactive" id="sectorcontrol_water" href="#" onclick="return wb.toggleSector('water')">9</a></li>
+            <li class="s10"><a sector-name="education" original-title="Education" id="sector11" href="#" onclick="return wb.toggleSector('education')" class="sectorcontrol inactive" id="sectorcontrol_education">10</a> </li>
             <li class="s11"><form action="" method="get">
                 <input name="input" id="sall" class="" type="checkbox" value="" onclick="wb.toggleSector('all')"/>
               </form></li>
