--- a/css/maps.css
+++ b/css/maps.css
@@ -1,7 +1,7 @@
 /*Map Area*/
 #geoiq_map{width:958px; height:514px;}
 
-#map-content {width:958px; height:514px; border-left:solid 1px #d9dbcd; border-bottom:solid 1px #d9dbcd;  border-right:solid 1px #d9dbcd; background:#FFFFFF;}
+#map-content {width:958px; height:514px; min-height: 514px; border-left:solid 1px #d9dbcd; border-bottom:solid 1px #d9dbcd;  border-right:solid 1px #d9dbcd; background:#FFFFFF;}
 #map-content-header{background-image:url(../images/map.nav.header.gif); border:medium none;height:47px;  overflow:hidden;  padding:0 0 0 0}
 #map-content-title {font-family:arial;font-size:13px; color:#000; white-space:normal;float:left; margin-top:10px; margin-left:15px; padding-top:6px; } 
 #map-content-sectors {font-family:arial;font-size:13px; color:#777876; white-space:normal;float:right; margin-top:10px; margin-right:25px; margin-left:15px; padding-top:6px; } 
@@ -87,7 +87,8 @@
   color:#666666;  font-size:11px;  font-weight:bold;  line-height:20px;  padding:5px 0px 0px 5px;margin:0px 0px 0px 5px;  width:80%;}
 
 /*Projects Search Bar*/
-#projects-bar {width:958px; height:45px; margin-top:17px; margin-bottom:17px; background-image:url(../images/project-bar-bg.gif); border-top:2px solid #9b0a07; border-left:1px solid #cfd1c4; border-bottom:1px solid #cfd1c4; border-right:1px solid #cfd1c4; float:left;}
+#projects-bar {width:958px; height:45px; background-image:url(../images/project-bar-bg.gif); border-top:2px solid #9b0a07; border-left:1px solid #cfd1c4; border-bottom:1px solid #cfd1c4; border-right:1px solid #cfd1c4; float:left;}
+#projects-bar {margin-top:17px; margin-bottom:17px; }
 #project-search-box{background:url(../images/projects_search.jpg) no-repeat scroll 0 0 transparent; right:0;float:right;border:none;width:400px;height:31px; margin-top:-22px; padding-left: 10px;}
 .project-bar-text {width: 200px;font-family:arial, sans serif; font-size:12px; color:#000; margin-top: 15px; margin-left: 10px;}
 .project-search-box-text {font-family:arial, sans serif; font-size:13px;}
@@ -98,7 +99,7 @@
 table {border-collapse: collapse;width:960px;font-family:Arial, sans-serif;font-size:12px;color:#000;}
 table {height: 400px;overflow-y: scroll; overflow-x: hidden;}
 #project-search-box {display: none;}
-table, th,td {padding-left:13px; margin-top:6px;}
+table, th,td {padding:0 13px; margin-top:6px;}
 th,td {height:50px}
 
 table, th {
@@ -191,3 +192,5 @@ color:#000; text-align:left; padding-left:18px; margin-top:10px; margin-left:-10
 .inactivepanel {opacity: 0.6;}
 .sort_icon {display: none;}
 .load_link {display :none;}
+#map-title{ font-size: 0.9em;}
+#locations_list .inactive {opacity: 0.5;}
