--- a/m4r/views/footer.erb
+++ b/m4r/views/footer.erb
@@ -1,4 +1,4 @@
-    <div id="footnote">Current projects as of June 30, 2010.</div>
+    <% unless @country[:name] == "World" %><div id="footnote">Current projects as of June 30, 2010.</div><% end %>
     <!--Red Footer Begins-->
     <div id="network-breadcrumb">
       <div class="limiter"> <span class="breadcrumb-link"><a class="breadcrumb-link-home">You are here</a></span>
