--- a/m4r/views/layout.erb
+++ b/m4r/views/layout.erb
@@ -80,7 +80,7 @@ var jq = jQuery.noConflict();
       <div class="navigation"> <a class="network-home" href="http://www.worldbank.org">The World Bank</a>
         <ul class="links network-links">
           <li><a href="http://www.worldbank.org/about">About</a></li>
-          <li><a class="active" href="http://www.worldbank.org/data">Data</a></li>
+          <li><a class="active" href="<%= PLATFORM_API_URL %>">Maps</a></li>
           <li><a href="http://econ.worldbank.org">Research</a></li>
           <li><a href="http://www.worldbank.org/wbi">Learning</a></li>
           <li><a href="http://www.worldbank.org/news">News</a></li>
