--- a/m4r/views/map_header.erb
+++ b/m4r/views/map_header.erb
@@ -1,20 +1,20 @@
     <div id="map-content-header">
       <div class="worldmenuholder">
         <ul class="worldmenu">
-          <li class="first"><a href="javascript:return false;" ><%= @country[:name].upcase %></a>
+          <li class="first"><a href="javascript:return false;" ><%= @country[:name].upcase %> / <span id="map-title">Projects by Poverty</span></a>
             <ul>
               <% if @country[:name] == "World" %>
               <% @country[:regions].each do |region, region_attr| %>
-                <li><a href="javascript:wb.setLocation('<%= region_attr[:name] %>',<%= region_attr[:lat] %>,<%= region_attr[:lon] %>,<%= region_attr[:zoom] %>)"><%= region_attr[:name] %></a></li>
+                <li><a href="#" onclick="return wb.setLocation('<%= region_attr[:name] %>',<%= region_attr[:lat] %>,<%= region_attr[:lon] %>,<%= region_attr[:zoom] %>)"><%= region_attr[:name] %></a></li>
               <% end %>
               <% else %>
-                <li><a href="#" onclick="wb.setState(null,'Extreme Poverty'); return false">Extreme Poverty (MDG1)</a></li>
-                <li><a href="#" onclick="wb.setState(null,'Malnutrition'); return false">Malnutrition (MDG1)</a></li>
-                <li><a href="#" onclick="wb.setState(null,'Infant Mortality'); return false">Infant Mortality (MDG1)</a></li>
-                <li><a href="#" onclick="wb.setState(null,'Malnutrition'); return false">Births Attended (MDG1)</a></li>
-                <li><a href="#" onclick="wb.setState(null,null,null,['all']); return false">Project Portfolio</a></li>
-                <li><a href="#" onclick="wb.setState(null,'Extreme Poverty',null,['all']); return false">Projects by Poverty</a></li>
-                <li><a href="#" onclick="wb.setState(null,'Population',null,['all']); return false">Projects by Population</a></li>
+                <li><a href="#" onclick="return wb.setState(null,'Poverty')">Extreme Poverty (MDG1)</a></li>
+                <li><a href="#" onclick="return wb.setState(null,'Malnutrition')">Malnutrition (MDG1)</a></li>
+                <li><a href="#" onclick="return wb.setState(null,'Infant Mortality')">Infant Mortality (MDG1)</a></li>
+                <li><a href="#" onclick="return wb.setState(null,'Malnutrition')">Births Attended (MDG1)</a></li>
+                <li><a href="#" onclick="return wb.setState(null,null,null,['all'])">Project Portfolio</a></li>
+                <li><a href="#" onclick="return wb.setState(null,'Poverty',null,['all'])">Projects by Poverty</a></li>
+                <li><a href="#" onclick="return wb.setState(null,'Population',null,['all'])">Projects by Population</a></li>
               <% end %>
             </ul>
           </li>
