--- a/m4r/views/share.erb
+++ b/m4r/views/share.erb
@@ -1,8 +1,6 @@
     <div id="share">
       <ul>
-     <!--   <li class="print"><a href="#">Print</a></li>
-        <li class="email"><a href="#">Email</a></li>-->
-        <li class="download"><a href="" id="download_data">DOWNLOAD</a></li>
+        <% if @country[:name] != "World" %><li class="download"><a href="" id="download_data">DOWNLOAD</a></li><% end %>
         <li class="simpleshare_link"><a href="http://data.worldbank.org/topic/public-sector" >SHARE</a></li>
       </ul>
     </div>
