--- a/m4r/views/layer_controls.erb
+++ b/m4r/views/layer_controls.erb
@@ -5,16 +5,13 @@
         </div>
         <div class="dropmenuholder">
           <ul class="dropmenu">
-            <li class="first" title="Zoom to Locations"><a href="">LOCATIONS</a>
+            <li class="first" title="Zoom to Locations"><a href="#" onclick="return false;">LOCATIONS</a>
               <ul id="locations_list">
                 <% if @country[:name] == "World" %>
-                <% MAPS[:world][:regions].each do |region, region_attr| %>
-                  <% region_attr[:countries].each do |country, country_attr| %>
-                  <% if (country_attr[:status] == 'active') %>
-                  <li><a href="<%= (country_attr[:status] == 'inactive') ? "#" : "/#{region}/#{country}" %>" class="<%= country_attr[:status] %>"><%= country_attr[:name] %></a></li>
-                  <% end %>
-                  <% end %>
-                <% end  %>
+                <% @country[:regions].each do |region, region_attr| %>
+                  <li><a href="#" onclick="return wb.setLocation('<%= region_attr[:name] %>',<%= region_attr[:lat] %>,<%= region_attr[:lon] %>,<%= region_attr[:zoom] %>)"><%= region_attr[:name] %></a></li>
+                <% end %>
+
                 <% elsif(@country.keys.include?(:adm1)) %>
                 <% @country[:adm1].each do |adm_attr| %>
                   <li><a href="#" onclick="return wb.setLocation('<%= adm_attr[:name] %>',<%= adm_attr[:lat] %>,<%= adm_attr[:lon] %>,<%= adm_attr[:zoom] %>)"><%= adm_attr[:name] %></a></li>                
