--- a/css/layout.css
+++ b/css/layout.css
@@ -567,3 +567,12 @@ margin-bottom:10px;
 }
 
 #footnote {float: right; color: #989A94;}
+.static_display {border-top:2px solid #990d00; border-left:1px solid #dadccf; padding:10px 10px 10px 10px; text-align:left; font-size:12px; line-height:20px;}
+.static_display h4 {font-family:Georgia, "Times New Roman", Times, serif; font-size:27px; color:#990d00; font-weight:normal;}
+.static_display h5 {font-size:18px; font-family:Georgia, "Times New Roman", Times, serif; margin:0px 0px 0px 0px; padding:0px 0px 0px 0px; line-height:normal; font-weight:500;}
+.static_display ul {margin:0px 0px 0px 0px; padding:10px 0px 10px 10px; list-style:none;}
+.static_display ul li{margin:0px 0px 3px 0px; padding:0px 0px 0px 10px; text-align:left; font-size:13px; background:url(../images/bullet-brown.gif) left 4px no-repeat;}
+.static_display ul li a {color:#690600}
+.static_display p {font-size:13px;  text-align:justify; margin:0px 0px 10px 0px;}
+.static_display a {color:#690600}
+.static_display span {color:#690600; font-weight:bold;}
