--- a/m4r/views/layout.erb
+++ b/m4r/views/layout.erb
@@ -21,6 +21,8 @@
   <script type="text/javascript" src="/js/jquery-1.js"></script>
 <script type="text/javascript" charset="utf-8">
 var jq = jQuery.noConflict();
+if (top.frames.length!=0)
+  top.location=self.document.location;
 </script>  
   <script type="text/javascript" src="/js/tipsy.js"></script>
   
@@ -36,7 +38,6 @@ var jq = jQuery.noConflict();
 
 
 <!-- <script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/jquery-1.3.2.min.js"></script> -->
-
 
 <script type="text/javascript" charset="utf-8" src="/js/f1.js"></script>
 <script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/f1.api.js"></script>
