--- a/m4r/views/layer_controls.erb
+++ b/m4r/views/layer_controls.erb
@@ -1,6 +1,6 @@
 <div id="layerinfo">
   <ul>
-    <li class="">Choose from the data for indicators and portfolio projects below to investigate mapping for results:</li>
+    <li class="">Choose the indicator data and portfolio projects below to investigate mapping for results:</li>
   </ul>
 </div>
 <div class="dropmenuholder">
