--- a/m4r/views/about.erb
+++ b/m4r/views/about.erb
@@ -7,26 +7,26 @@
     <li><a href="#feedback">Feedback</a></li>
   </ul>
   <h5 id="context">Context</h5>
-  <p>  Within the framework of the implementation of the new Policy on Access to Information the World Bank has worked over the last couple of months on the innovative uses of technologies to enhance the transparency and accountability of the Bank; in particular the launch of the Open Data initiative  in April, 2010 which provides free and easy access to statistics and indicators about development for all users through a new website,
-  </p>
-  <p>Extending this initiative to better communicate the achievement and impact of results, we have developed a Mapping for Results Platform, launched on October 7th, 2010. The objectives of this initiative are to visualize the location of investment projects to better monitor project results and impact on people; to enhance transparency and social accountability; and to enable citizens and other stakeholders to provide direct feedback on WB projects. 
-  </p>
-  <p>This inter-active Mapping Platform has been launched first as a beta version to enable us to make important adjustments and improvements over time. In the first phase, it will provide users with a new tool to overly disaggregated poverty and human development data (i.e. infant mortality rates) with the geographic location of WB-financed programs at the sub-national level in four countries: Haiti, Bolivia, Kenya and the Philippines.  
-  </p>
-  <p>More than 12,000 specific project locations for around 1,100 active Bank- financed projects across 42 countries in Sub-Saharan Affric, 27 countries in Latin America and the Caribbean, Indonesia and the Philippines were geo-coded by an experienced team of researchers and geo-coders using publicly-available project documentation. As part of the Bank's Open Development  approach, and to support the Apps for Development Challenge, the geo-coded project data has been made available to the public on a pilot basis through the API of the Open Data Initiative and the Mapping for Results Platform.
-  </p>
+<p>The Mapping for Results Platform visualizes the geographic location of WB-financed projects at the sub-national level.
+</p>
+<p>The main objectives of the program are (i) to support the monitoring and reporting of results by providing users with an analytical tool to analyze and visualize the geographic location of Bank-funded projects at the sub-national level ; (ii) to improve aid effectiveness by enhanced transparency and accountability of donor-funded operations and (iii) to strengthen the participation of multiple stakeholders, including civil society organizations and citizen groups in the Bank’s work at the country level.
+</p>
+<p>This inter-active Mapping Platform has been launched first as a beta version to enable us to make important adjustments and improvements over time. In the first phase, it will provide users with a new tool to overlay disaggregated poverty and human development data (i.e. infant mortality rates) with the geographic location of WB-financed programs at the sub-national level in four countries: Bolivia, Haiti, Kenya and the Philippines.  
+</p>
+<p>More than 12,000 specific project locations for 1,251 active Bank- financed projects across 42 countries in Sub-Saharan Africa, 27 countries in Latin America and the Caribbean, Indonesia, Nepal, and the Philippines were geo-coded by an experienced team of researchers and geo-coders using publicly-available project documentation. As part of the Bank's Open Development approach, and to support the Apps for Development Challenge, the geo-coded project data has been made available to the public on a pilot basis through the API of the <a href="http://example.com/">Open Data Initiative</a> and the Mapping for Results Platform. 
+</p> 
   <h5 id="partners">Partners</h5>
 
-  <p>The Mapping for Results initiative is a partnership between the World Bank and AidData , an initiative of the Development Gateway, the College of William and Mary, and Brigham Young University.   The initiative’s original goal was to map all active World Bank projects in Sub-Saharan Africa.  The initiative was so successful, however, that the Mapping for Results program was able to geocode all active projects in not only the Africa Region, but in Latin America and several Asian countries as well (Nepal, Sri Lanka, Indonesia, and the Philippines).  The AidData/UCDP methodology [link to AidData codebook] used to geocode World Bank projects is flexible enough to use with other donors, which has also led to the expansion of the initiative to include some African Development Bank (AfDB) projects.
-  </p>
-  <p>AidData brings expertise in standardizing and enhancing project-level information on development activities to the partnership.  AidData provides technical oversight and quality control for the geocoding process, which follows the AidData/UCDP methodology developed jointly with Uppsala University in Sweden.  As part of the AidData/UCDP methodology, each project is coded twice, with the results of both coders compared and combined into one final data set.  This double-coding process ensures that the geocoding process produces the most thorough and accurate location data possible.
-  </p>
+<p>The Mapping for Results initiative is a partnership between the World Bank and AidData. AidData is an initiative of the Development Gateway, the College of William and Mary, and Brigham Young University.  AidData brings expertise in standardizing and enhancing project-level information on development activities to the partnership.  AidData provides technical oversight and quality control for the geocoding process, which follows the UCDP/AidData methodology developed jointly with Uppsala University in Sweden.  As part of the UCDP/AidData methodology, each project is coded twice, with the results of both coders compared and combined into one final data set.  This double-coding process ensures that the geocoding process produces the most thorough and accurate location data possible. In addition to geocoding World Bank projects, the flexibile methodology developed by UCDP/AidData has allowed it to geocode projects from other donors. 
+</p>
+<p><a href="http://www.fortiusone.com/" title="FortiusOne Visual Intelligence Solutions | Visual Intelligence, Smarter Decisions">FortiusOne</a> develops the underlying GeoIQ platform that powers the Mapping for Results Initiative. GeoIQ, which also is available through <a href="http://www.geocommons.com/" title="GeoCommons">GeoCommons</a>, enables easy collaborative sharing of data, visualizations, and analysis. FortiusOne supports GeoIQ platform in use by Federal Government Agencies, NGO's such as United Nations GRID-Arendal, and numerous global citizens in engaging in conversations and open data through mapping.</p>
 
-  <h5 id="faq">Frequently Asked Questions</h5>
-  <span> What is geo-coding?</span>
-  <p>Geo-coding is the process of assigning geographic coordinates to a location. For this mapping for results </p>
+<h5 id="faq">Frequently Asked Questions</h5>
+<span>What is geo-coding?</span>
+<p>Geo-coding is the process of mapping foreign aid projects to the location of their intended recipients.  The Mapping for Results initiative used the UCDP/AidData coding methodology which assigns latitudes and longitudes to project locations, while also specifying the geographic precision and scope of the location (i.e. city, district, province, country). </p>
+
   <span>Which projects are included in the maps?</span> 
-  <p>Only active world bank projects as of June 30, 2010 have been included in the maps. Additionally, we only have mapped lending operations and not trust funds.</p>
+  <p>The Mapping Platform visualizes all active World Bank projects as of June 30, 2010. It is important to note that our mapping initiative focuses on mapping investment projects working at the country level.</p>
 
   <p>The following product lines were considered for the geo coding process:</p>
 
@@ -41,7 +41,7 @@
     <li>Montreal Protocol</li>
   </ul>
 
-  <p>Product lines that weren't geo coded:</p>
+  <p>The following type of projects and non-lending services were not geo-coded, since these type of activities do not lend itself to being mapped:</p>
   <ul>
     <li>Economic and Sector Work</li>
     <li>Global Programs and Partnerships</li>
@@ -52,17 +52,15 @@
     <li>Technical Assistance (Non-lending)</li>
   </ul>
 
-  <span>What is the source of your data on development indicators?</span>
-  <span>The data for the development indicators used in our maps originates from the following sources:</span>
-  <p>Extreme Poverty (MDG1)</p>
-  <p>Data for Extreme Poverty comes from CIESIN</p>
-  <p>Small Area Estimates of Poverty and Inequality
-  </p><p>These data sets involve econometric or quantitative indirect estimation procedures that combine spatial precision (such as censuses) with substantive depth (such as surveys). They have been developed and implemented by the World Bank Development Economics Research Group and colleagues, in collaboration with country teams for the implementation of Poverty Reduction Strategy Programmes.</p>
-  <p>Though spatial information may be used in the process of generating these estimates, the spatial data is generally separated prior to the analysis, reporting and dissemination of the poverty estimates. Thus, CIESIN’s database of sub-national small area estimates contains poverty and inequality data with reconstructed boundary information, using basic geographic information system (GIS) tools. (Text obtained from the source of data at: http://sedac.ciesin.columbia.edu/povmap/methods_nat_sae.jsp)</p>
-  <p>Demographic and Health Surveys (DHS)</p>
-  <p>http://www.measuredhs.com/</p>
-  <p>The MEASURE DHS (Demographic and Health Surveys) Project is responsible for collecting and disseminating accurate, nationally representative data on health and population in developing countries. The project is implemented by Macro International, Inc. and is funded by the United States Agency for International Development (USAID) with contributions from other donors such as UNICEF, UNFPA, WHO, UNAIDS.
-  </p>
+  <h5>What is the source of your data on development indicators?</h4>
+  <span>Extreme Poverty (MDG1)</span>
+<p><em>Small Area Estimates of Poverty and Inequality</em></p>
+<p>These data sets involve econometric or quantitative indirect estimation procedures that combine spatial precision (such as censuses) with substantive depth (such as surveys). They have been developed and implemented by the World Bank Development Economics Research Group and colleagues, in collaboration with country teams for the implementation of Poverty Reduction Strategy Programmes.</p>
+
+<p>Though spatial information may be used in the process of generating these estimates, the spatial data is generally separated prior to the analysis, reporting and dissemination of the poverty estimates. Thus, CIESIN’s database of sub-national small area estimates contains poverty and inequality data with reconstructed boundary information, using basic geographic information system (GIS) tools. (Text obtained from the source of data at: http://sedac.ciesin.columbia.edu/povmap/methods_nat_sae.jsp)</p>
+
+
+
   <h5>Malnutrition (MDG1)</h5>
   <p>Malnutrition prevalence, height for age (% of children under 5)
   </p><p>Prevalence of child malnutrition is the percentage of children under age 5 whose height for age (stunting) is more than two standard deviations below the median for the international reference population ages 0-59 months. For children up to two years old height is measured by recumbent length. For older children height is measured by stature while standing. The data are based on the WHO's new child growth standards released in 2006. Source: World Health Organization, Global Database on Child Growth and Malnutrition.
