--- a/m4r/views/layout.erb
+++ b/m4r/views/layout.erb
@@ -25,18 +25,10 @@ if (top.frames.length!=0)
 </script>  
   <script type="text/javascript" src="/js/tipsy.js"></script>
   
-  <!-- <script type="text/javascript" src="/js/drupal.js"></script> 
-
-  <script type="text/javascript" src="/js/collapsible.js"></script>
-  <script type="text/javascript" src="/js/search_box.js"></script>-->
-
   <script type="text/javascript" src="/js/jquery_002.js"></script>
   <script type="text/javascript" src="/js/ui.js"></script>
   <script type="text/javascript" src="/js/effects_002.js"></script>
   <script type="text/javascript" src="/js/effects.js"></script>
-
-
-<!-- <script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/jquery-1.3.2.min.js"></script> -->
 
 <script type="text/javascript" charset="utf-8" src="/js/f1.js"></script>
 <script type="text/javascript" charset="utf-8" src="<%= PLATFORM_API_URL %>/javascripts/f1.api.js"></script>
@@ -56,6 +48,8 @@ if (top.frames.length!=0)
 <script src="<%= PLATFORM_API_URL %>/javascripts/jquery-css-transform.js?1279556727" type="text/javascript"></script>
 <script src="<%= PLATFORM_API_URL %>/javascripts/f1.maker.visual_creator.js?1279556727" type="text/javascript"></script>
 <% end %>
+
+<script src="/map.js" type="text/javascript"></script>
 
 </head>
 <body class=" region-left region-right region-far-right region-content-top">
@@ -103,8 +97,6 @@ if (top.frames.length!=0)
 
     <%= partial :footer %>
 </div>
-<span class="clear"></span>
-
 <!-- /#wrapper -->
 <!-- /layout -->
 
