--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -1,4 +1,3 @@
-<script type="text/javascript" charset="utf-8">
 var proxy_host = "<%= PLATFORM_API_URL %>";    
 var project_attributes = ["project title", "project id", "activity count", "financing", "sector1", "approval date"];
 
@@ -46,7 +45,7 @@ if(typeof(F1)=='undefined') {F1 = {}}
     "Population": {source: "finder:", title:"Population", subtitle: "Total Number of People", styles: { type: "CHOROPLETH",stroke: {color: 0x222222}, fill: { colors: [0xEFF3FF, 0xBDD7E7, 0x6BAED6, 0x3182BD, 0x08519C], categories: 5, classificationNumClasses: 5, classificationType: "EQUAL INTERVAL", opacity: 0.75, selectedAttribute: "population from statoids"}}, infosubtitle: "$[name_2],$[name_1]", table: null, description: "<p>The land area of the world is divided into countries (1). Most of the countries are, in turn, divided into smaller units. These units may be called states, provinces, regions, governorates, and so on. A phrase that describes them all is 'major administrative divisions of countries'. This page uses the term 'statoid' for short. Since the word has no other accepted meaning (2), it can be used as a search term on search engines to target this site. The 'a' of statoid is long.</p><p>This page is a guide to Internet sites about the statoids of each country. It can be used independently, but it is meant to be an update to the book 'Administrative Subdivisions of Countries', by Gwillim Law (McFarland &amp; Company, Jefferson, North Carolina) (3). The international standard ISO 3166 is the source for the list of countries. As a result, some dependencies, and a few integral parts of larger countries, are listed as if they were separate countries</p><p>Source: <a href='http://www.statoids.com/ubo.html'>Statoids</a></p>"}
 	},
   F1.WorldBank.prototype = {
-    init: function(map_id) {
+    init: function(map_id, maponload) {
       
       var self = this;
       this.activities = {};
@@ -86,7 +85,7 @@ if(typeof(F1)=='undefined') {F1 = {}}
                 uiZoom: true,uiLayers: false,uiLegend: false,uiStyles: true,
                 uiHeader: true,hideGCLogo: true,hideGILogo: true,
                 core_host:  proxy_host + '/', finder_host:proxy_host + '/', maker_host: proxy_host + '/',
-                onload: function() {  <%= @country[:name] == "World" ? "wb.styleLegend()" : "wb.drawCharts(wb.map);" %> }
+                onload: function() { maponload(self.map) }
       });
     },
     setBookmark: function(key, value) {
@@ -452,7 +451,7 @@ if(typeof(F1)=='undefined') {F1 = {}}
       map.swf.addLayerCategoryFilter(self.stylelayers["Project Locations"].order, {attribute:"sector1",categories:self.wbicons});
       
       // infowindow
-      map.swf.addLayerInfoWindowFilter(self.stylelayers["Project Locations"].order, {title: "$[project title]", subtitle: "$[sector1]", tabs:[{title: "Financing", type: "text", value:"Project ID: $[project id]\nTitle: $[project title]\nFinancing: $ $[total amt] million\nApproved:$[approval date]\nMajor Sector:$[sector1]\nOther Sectors: $[sector2], $[sector3]"}, {title: "Location", type: "text", value: "Location: $[adm2],$[adm1]\nWorld Bank Region: $[region]\n$[precision description]"}]});
+      map.swf.addLayerInfoWindowFilter(self.stylelayers["Project Locations"].order, {title: "$[project title]", subtitle: "$[sector1]", tabs:[{title: "Financing", type: "text", value:"Project ID: <a href='http://web.worldbank.org/external/projects/main?pagePK=64283627&piPK=73230&theSitePK=40941&menuPK=228424&Projectid=$[project id]'>$[project id]\nProject Name: $[project title]\nSector:$[sector1]\nTotal Amount: $ $[total amt] million"}, {title: "Location", type: "text", value: "$[adm1]\n$[adm2]\n\n$[precision description]"}]});
       map.swf.addLayerInfoWindowFilter(self.stylelayers["Project Counts"].order, {title: "Projects: $[project count]", subtitle: "Total Projects working in this Region"});
       // map.swf.addLayerInfoWindowFilter(self.stylelayers["Project Counts"].order, {title: "Projects: $[project count]", subtitle: "Total Projects working in this Region", tabs:[{title: "Projects", type: "text", value:"<ul><li>$[pid1]</li><li>$[pid2]</li><li>$[pid3]</li><li>$[pid4]</li><li>$[pid5]</li><li>$[pid6]</li><li>$[pid7]</li><li>$[pid8]</li><li>$[pid9]</li><li>$[pid10]</li><li>$[pid11]</li><li>$[pid12]</li><li>$[pid13]</li><li>$[pid14]</li></ul>"}, {title: "Location", type: "text", value: "Location: $[adm2],$[adm1]\nWorld Bank Region: $[region]\n$[precision description]"}]});
 
@@ -477,6 +476,7 @@ if(typeof(F1)=='undefined') {F1 = {}}
       self.styleMap(map);
       F1.Visualizer.utils.get_data_from_flash(self.stylelayers["Project Locations"].source.replace("finder:",""), function(data) {
           wb.setIndicator("Poverty");
+          wb.toggleSector("counts_admin1")
           self.sortData(data);
           self.projectTable(data);
           self.hideLoading();
@@ -502,6 +502,3 @@ jq("#locations_list .inactive").click(function () {
 });
 
 var wb = new F1.WorldBank();
-wb.init(<%= @country[:map].to_s %>);
-
-</script>
